--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "gulp-load-plugins": "^1.3.0",
     "gulp-notify": "^2.2.0",
     "gulp-sass": "^2.3.2",
+    "gulp-concat": "^2.6.0",
+    "gulp-uglify": "^2.0.0",
     "node-inspector": "^0.12.8",
     "run-sequence": "^1.2.2"
   },
