--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "foundation-sites": "~6.2.0",
-      "motion-ui": "~1.2.2"
+    "motion-ui": "~1.2.2",
+    "photoswipe": "^4.1.1"
   }
 }
