--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "hexo-theme-zurb-foundation",
-  "repository" :
-  {
-    "type" : "git",
-    "url" : "https://github.com/scorchio/hexo-theme-zurb-foundation.git"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/scorchio/hexo-theme-zurb-foundation.git"
   },
   "version": "0.1.0",
   "devDependencies": {
     "gulp": "^3.9.1",
-    "gulp-load-plugins": "^1.3.0",
-    "gulp-sass": "^2.3.2",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.0",
-    "gulp-uglify": "^2.0.0",
-    "gulp-autoprefixer": "^3.1.0"
+    "gulp-debug": "^2.1.2",
+    "gulp-load-plugins": "^1.3.0",
+    "gulp-responsive": "^2.6.0",
+    "gulp-sass": "^2.3.2",
+    "gulp-uglify": "^2.0.0"
   },
   "dependencies": {
     "gulp-autoprefixer": "^3.1.0"
