--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "gulp-uglify": "^2.0.0"
   },
   "dependencies": {
-    "gulp-autoprefixer": "^3.1.0"
+    "gulp-autoprefixer": "^3.1.0",
+    "image-size": "^0.5.0"
   },
   "scripts": {
     "start": "gulp",
