--- a/package.json
+++ b/package.json
@@ -6,18 +6,20 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "bower": "^1.8.8",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-concat": "^2.6.0",
     "gulp-load-plugins": "^1.3.0",
     "gulp-sass": "^2.3.2",
-    "gulp-concat": "^2.6.0",
-    "gulp-uglify": "^2.0.0",
-    "gulp-autoprefixer": "^3.1.0"
+    "gulp-uglify": "^2.0.0"
   },
   "dependencies": {
     "gulp-autoprefixer": "^3.1.0"
   },
   "scripts": {
-    "start": "gulp",
-    "build": "gulp sass"
+    "install": "bower install",
+    "start": "gulp watch",
+    "build": "gulp build"
   }
 }
